k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monorepo-polyglot
  labels:
    name: monorepo-polyglot
    istio-injection: enabled
